fix(button): fix alignment text demo (#6)
* fix(demo): external-link alignment

---------

--- a/projects/demo/src/app/components/external-link/external-link.component.scss
+++ b/projects/demo/src/app/components/external-link/external-link.component.scss
@@ -1,3 +1,7 @@
+a {
+  display: inline-flex;
+}
+
 span {
   margin-right: 4px;
 }
